[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.0.1"
description = "A sample project using hatchling"
authors = [{ name = "Michael Penhallegon", email = "mike@hematite.tech" }]
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "dynaconf",
    "pymongo",
    "httpx",
    "uvicorn",
    "fastapi",
    "pydantic"
]

 # to allow a optional AWS Lambda deployment
 # package
[project.optional-dependencies]
aws_lambda = [
    "mangum"
]

[dependency-groups]
dev = [
    "tox >= 4.21",
    "tox-pyenv-redux",
    "ipython",
    "ipdb"
]
testing = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
linting = [
    "ruff~=0.8.0"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C", "B", 
    "D1", "D201", "D202", "D205", "D210", "D212", "D4",
    "E4", "E7", "E9", 
    "F", "I", "W",
]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: mark test as integration",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = [
    "*/test/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "^/s*/././.",
    "handler = Mangum(subscribe_app)"
]
exclude_also = [
    "if __name__ == .__main__.",
]

[tool.tox]
requires = ["tox>=4.21"]
env_list = ["py313", "py312", "intg", "lint", "format"]

[tool.tox.env_run_base]
dependency_groups = ["dev", "testing"] 
commands = [[
    "pytest",
    "-v",
    "--cov=app",
    "--cov-report=term-missing", 
    "-m not integration",
    { replace = "posargs", extend = true }
]]

[tool.tox.env.intg]
dependency_groups = ["dev", "testing"] 
commands = [[
    "pytest",
    "-v",
    "--cov=app",
    "--cov-report=term-missing", 
    "-m integration",
    { replace = "posargs", extend = true }
]]

[tool.tox.env.lint]
dependency_groups = ["linting"]
commands = [
    ["ruff", "check", {replace = "posargs", default = ["src"], extend= true}]
]

[tool.tox.env.format]
dependency_groups = ["linting"]
commands = [
    ["ruff", "format", "--check", {replace = "posargs", default = ["src"], extend= true}]
]